@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-06-09T08:16:35Z",
+  "timestamp" : "2022-06-10T01:01:26Z",
   "count_outdated" : 328,
   "uniques_outdated" : 175,
-  "count" : 352,
+  "count" : 353,
   "uniques" : 190,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
