@@ -1,5 +1,5 @@
 {
-  "count": 24,
+  "count": 25,
   "uniques": 4,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-06-09T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
